Change path for favourites
